# pocket-tts-openai_streaming_server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  docker-entrypoint.sh  eslint.config.js  openapi.yaml  orval.config.mjs  package.json  playwright.config.js  pocket-tts-generate-docs.md  pocket-tts-python-api.md  pocket_tts_openai_server.py  project specifications.txt  pyinstaller_command.txt  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  run_pocket_tts_server.bat  run_pocket_tts_server_exe.bat  server.py  test_server.py  tsconfig.json  utils.py
.github/workflows/: build-exe.yml  ci.yml  docker.yml
app/: __init__.py  config.py  logging_config.py  routes.py
app/services/: __init__.py  audio.py  tts.py
app/studio/: __init__.py  breathing.py  chunking.py  db.py  episodes_routes.py  folders_routes.py  generation.py  git_ingestion.py  ingestion.py  library_routes.py  normalizer.py  playback_routes.py  repositories.py  routes.py  schemas.py  settings_routes.py  sources_routes.py  tags_routes.py
data/: podcast_studio.db
e2e/: pipeline-validation.spec.js  studio.spec.js
logs/: .gitkeep
scripts/: generate_openapi.py  validate_openapi.py
static/css/: studio.css  style.css
static/js/: app.js
static/js/studio/: api.bundle.js  api.bundle.js.map  api.js  api.ts  client.ts  custom-instance.ts  dom.js  editor.js  library.js  main.js  player-chunk.js  player-controls.js  player-queue.js  player-render.js  player-state.js  player-waveform.js  player.js  settings.js  state.js  utils.js
templates/: index.html  studio.html
